# codebase_signer

./: .gitignore  README.md  pyproject.toml  version.txt
auto_code_signature/: __init__.py  gui.py  licenses.py  main.py  spdx-licenses.csv  utils.py
test_codebase/: main.py  test1.py  test2.py
